@@ -12,6 +12,8 @@ Version 1.4.2
 -------------
 
 - Unix: fixed Ctrl+Up/Down/PgUp/PgDn shortcuts when NumLock is on (#2006843)
+- OS X: fixed running Gettext tools when Poedit is in directory with
+  spaces in its name (#2025823)
 - added Uyghur translation (Abduqadir Abliz)
 
 
